level_omega/css/dev.css
/* Layout */
#page {
  padding-bottom: 42px;
  position: relative;
}

#site-header {
  padding: 25px 0 10px 0;
  background: transparent url(../images/icon-beta.gif) 100% 0 no-repeat;
}

div#branding {
  margin-top: 0;
}

#block-level_user-user_login_logout_links {
  padding-right: 75px;
}

body.not-front #main_wrapper {
  padding-bottom: 0;
  position: relative;
}

#header_container,
#content,
#main-content,
#footer_wrapper {
  position: relative;
  clear: both;
}

#main_content_container {
 position: relative;
}

#footer_main {
  margin-top: 14px;
  padding-top: 21px;
}

/* node layout */
body.not-front #main-content .node .node-column {
  width: 340px;
  float: left;
}

body.not-front #main-content .node .first-col {
  padding-right: 10px;
}
body.not-front #main-content .node .last-col {
  padding-left: 10px;
}

/* Typography */
/**
 * text colors
 * #333
 * #666
 * #21a0e1
 */

/* rollover */
a:hover, ul.pager a:hover {
  color: #333;
}
/*html, body,*/
body.not-front #main-content .node {
  font: normal 14px/1.5 Arial, sans-serif;
  color: #666;
}

body.not-front #main-content .node p {
  margin: 0;
  padding: 0 0 21px 0;
}

/* heading */
/*h1#page-title {
  font: bold 20px/1em Arial, sans-serif;
  color: #333;
  text-align: right;
  float: right;
}*/

body.not-front #main-content .node h2 {
  font: bold 30px/1.25em Arial, sans-serif;
  color: #21a0e1;
  margin: 0;
  padding: 0 0 21px 0;
}

body.not-front #main-content .node h2.section-title {
  font: normal 100px/1em Georgia, 'Adobe Garamond Pro', serif;
  color: #333;
  margin: 0 0 28px 0;
  padding: 21px 0 28px 0;
  border-bottom: 1px dotted #666;
}

body.not-front #main-content .node h3 {
  font: bold 20px/1.25em Arial, sans-serif;
  color: #333;
  margin: 0;
  padding: 21px 0 14px  0;
}

body.not-front #main-content .node h4 {
  font: bold 14px/1.5 Arial, sans-serif;
  color: #333;
  margin: 0;
  padding: 0;
}

/* list style*/
#main-content .node ul {
  list-style: disc url(../images/bullet-list.gif);
  margin: 0 21px 21px 14px;
}

#main-content .node ol {
  margin: 0 0 21px 21px;
}
#main-content .node ol li {
  color: #21a0e1;
  font-weight: bold;
}
#main-content .node ol li span { /* need <span> to wrap around text for different color */
  color: #666;
  font-weight: normal;
}

/* Explained page */

/* tabulation */
div.bus_size {
  -moz-box-shadow: 0 0 0 transparent;
  -webkit-box-shadow: 0 0 0 transparent;
  box-shadow: 0 0 0 transparent;
  background: #fff url(../images/tabular-top.gif) 50% 0 no-repeat;
  padding-top: 25px;
  margin-bottom: 35px;
}

.node .bus_size_heading,
div.bus_accounts_section ,
div.bus_conditions_section {
  padding: 15px 20px;
}

.node .bus_size_heading {
  margin: 0;
  border-bottom: 1px dotted #aaa;
  height: auto;
}

div.bus_accounts_section {
  border-bottom: 1px dotted #aaa;
  border-top: 0 none;
  height: 180px;
}

div.bus_conditions_section {
  background: #f0f0f0 url(../images/tabular-bottom.gif) 50% 100% no-repeat;
  height: 185px;
}

body.not-front #main-content .node .bus_size_heading h3 {
 font: bold 30px/1.25em Arial, sans-serif;
  color: #21a0e1;
  padding: 0;
  margin: 0;
  position: relative;
  top: 0;
  left: 0;
}

body.not-front #main-content .node div.bus_size h4 {
  border-top: 0 none;
  line-height: 1.25em;
  padding-bottom: 14px;
}

body.not-front #main-content .node h2,
#main-content .node a.section_link,
#main-content .node div.large h3,
#main-content .node div.medium h3,
#main-content .node div.small h3 {
  font: bold 30px/1.25em Arial, sans-serif;
}

body.not-front #main-content .node .intro {
  font: bold 20px/24px Arial, sans-serif;
}

img#terminology {
  margin-bottom: 21px;
}

#main-content .node a.section_link,
#main-content .node .intro {
  color: #21a0e1;
  padding-top: 0;
}

div.bus_size ul li {
  background: transparent;
  padding-left: 0;
}

.node-type-page #main-content div.bus_size ol {
  padding: 0;
  margin-left: 21px;
}

body.not-front #main-content .node h2.glossary-title {
  border-top: 1px dotted #666;
  padding-top: 21px;
  margin-top: 21px;
}
body.not-front #main-content .node h2.first-glossary {
  border-top: 0 none;
  padding-top: 0;
  margin-top: 0;
}

/* terminology list & table (without JS) */
#main-content .node ul.term-list,
#main-content .node ul.term-list li {
  list-style: none;
  padding-bottom: 5px;
}

#main-content .node ul.term-list {
  margin-left: 10px;
  margin-right: 10px;
}

#main-content .node dl,
#main-content .node dl.terminology {
  margin: 0;
  padding: 0 0 21px 0;
  background: 0 none;

}

#main-content .node dl.terminology .grid_1 {
  width: 220px;
}

#main-content .node dl.terminology div {
  clear: both;
  overflow: auto;
}

#main-content .node dt,
#main-content .node dd {
  font: normal 1em/1.5em Arial, sans-serif;
  padding-bottom: 0;
  display: block;
}

#main-content .node dt {
  font: bold 1em/1.5em Arial, sans-serif;
  padding-bottom: 21px;
  color: #21a0e1;
}

#main-content .node dt div,
#main-content .node dd div {
  padding: 0;
  margin: 0;
}

/* glossaryToggle JS */
#main-content .node div.terminology {
  width: 700px;
  margin: 0;
  padding: 0;
}

#main-content .node div.terminology .inner-wrapper {
  background: #fff url(../images/glossary-wrapper.png) 50% 100% no-repeat; 
  padding: 0 25px;
  /*border: 1px solid #ccc;
  -moz-border-radius-bottomleft: 5px;
  -webkit-border-bottom-left-radius: 5px;
  border-bottom-left-radius: 5px;
  -moz-border-radius-bottomright: 5px;
  -webkit-border-bottom-right-radius: 5px;
  border-bottom-right-radius: 5px;*/
}
.close-button {
  background: #fff url(../images/glossary-wrapper.png) 50% 0 no-repeat; 
  display: block;
  clear: both;
  padding: 30px 25px 0 25px;
}
.close-button a {
  background: transparent url(../images/icon-close.gif) 100% 50% no-repeat;
  padding-right: 15px;
  float: right;
}

#main-content .node .termDefinition {
  position: relative;
  clerar: both;
}
/* ... */

